--- a/src/app/skills/skills.component.css
+++ b/src/app/skills/skills.component.css
@@ -17,7 +17,7 @@
   background: var(--forground_color);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  border-radius: 1em; /* adjust as needed */
+  border-radius: 1em;
 }
 
 .top-div {
@@ -32,6 +32,10 @@
   height: 100%;
   text-align: center;
   margin: 0 3em;
+  position: absolute;
+  top: 19%;
+  left: 33%;
+  transform: translate(-50%, -50%);
 }
 
 .bottom-div {
@@ -65,17 +69,24 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  align-items: center;
   justify-content: center;
 }
 
 .top-row {
+  display: flex;
+  align-items: center; /* Aligns vertically */
+  justify-content: center; /* Aligns horizontally */
   grid-row: 1;
 }
 
 .bottom-row {
+  display: flex;
+  align-items: start; /* Aligns to the top vertically */
+  justify-content: center; /* Aligns horizontally */
   grid-row: 2;
 }
+
+
 
 .right-div {
   flex-basis: 3em;
